# jobsight

./: .gitignore  README.md  app.js  council_mappings.csv  embedded-data.js  enhance.css  index.html  jobs.xml  map-data-0.js  map-data-1.js  map-data-2.js  map-data-3.js  map-data-4.js  map-data-5.js  map-interactions.js  pyproject.toml  requirements.txt  styles.css
.github/workflows/: fetch.yml  pages.yml  scrape-vic-council-jobs.yml
data/: current-jobs.json  job-board-data.json  report-jobs.json  run-summary.json  source-health.json  source-profiles.json  sources.json
data/observations/: 2026-05-27-seed.jsonl.bz2  2026-05-30.jsonl  2026-05-31.jsonl  2026-06-01.jsonl  2026-06-02.jsonl  2026-06-03.jsonl  2026-06-19.jsonl  2026-06-20.jsonl  2026-06-21.jsonl  2026-06-22.jsonl  2026-06-23.jsonl  2026-06-24.jsonl  2026-06-25.jsonl  2026-06-26.jsonl  2026-06-27.jsonl  2026-06-28.jsonl  2026-06-29.jsonl  2026-06-30.jsonl  2026-07-01.jsonl  2026-07-02.jsonl  2026-07-03.jsonl  2026-07-04.jsonl  2026-07-05.jsonl  2026-07-06.jsonl  2026-07-07.jsonl  2026-07-08.jsonl  2026-07-09.jsonl  2026-07-10.jsonl  2026-07-11.jsonl  2026-07-12.jsonl  2026-07-13.jsonl  2026-07-14.jsonl  2026-07-15.jsonl  2026-07-16.jsonl  2026-07-17.jsonl  2026-07-18.jsonl  2026-07-19.jsonl  2026-07-20.jsonl  2026-07-21.jsonl  2026-07-22.jsonl  (+1 more)
data/quarantine/: 2026-05-29.jsonl  2026-05-30.jsonl  2026-05-31.jsonl  (+38 more)
docs/: FORKING.md  OPERATIONS.md
scripts/: scrape_vic_council_jobs.py
site/: app.js  index.html  styles.css
tests/: test_extractors.py  test_intelligence.py  test_workflow.py
(+24 files in other folders)
